@@ -3,7 +3,6 @@ package com.example.backend.service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
@@ -31,12 +30,10 @@ public class ChatHistoryService {
     private final ChatMessageAIRepository messageRepository;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
-    // ====================================================
-    // 1. LẤY DANH SÁCH CÁC PHIÊN CHAT (HIỂN THỊ CỘT TRÁI)
-    // ====================================================
+
+    // LẤY DANH SÁCH CÁC PHIÊN CHAT (HIỂN THỊ CỘT TRÁI)
     public List<ChatSessionDTO> getUserSessions(String guestSessionKey) {
         Integer userId = null;
-        System.out.println("Nhận đc:" + guestSessionKey);
         try {
             userId = SecurityUtils.getCurrentUserId();
         } catch (Exception ignored) {
@@ -48,7 +45,7 @@ public class ChatHistoryService {
         } else if (guestSessionKey != null && !guestSessionKey.isBlank()) {
             sessions = sessionRepository.findBySessionKeyOrderByUpdatedAtDesc(guestSessionKey);
         } else {
-            return List.of(); // Trả về rỗng nếu chưa login và cũng không có sessionKey
+            return List.of();
         }
 
         return sessions.stream()
@@ -58,12 +55,11 @@ public class ChatHistoryService {
                         .contextType(s.getContextType())
                         .updatedAt(s.getUpdatedAt())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ====================================================
-    // 2. LẤY NỘI DUNG TIN NHẮN TRONG 1 PHIÊN (HIỂN THỊ CỘT PHẢI)
-    // ====================================================
+
+    // LẤY NỘI DUNG TIN NHẮN TRONG 1 PHIÊN (HIỂN THỊ CỘT PHẢI)
     public List<AIChatResponse> getMessagesBySession(UUID sessionId) {
 
         List<ChatMessageAI> messages = messageRepository.findBySessionIdOrderByCreatedAtAsc(sessionId);
@@ -73,14 +69,12 @@ public class ChatHistoryService {
                     Object attachment = null;
                     List<ActionItem> actions = null;
 
-                    // Bóc tách metadata từ DB ra lại thành attachment và actions
                     if (m.getMetadata() != null) {
                         if (m.getMetadata().containsKey("attachment")) {
                             attachment = m.getMetadata().get("attachment");
                         }
                         if (m.getMetadata().containsKey("actions")) {
                             try {
-                                // Ép kiểu an toàn từ Map của Postgres sang List<ActionItem>
                                 actions = objectMapper.convertValue(
                                         m.getMetadata().get("actions"), new TypeReference<List<ActionItem>>() {});
                             } catch (Exception e) {
@@ -90,22 +84,19 @@ public class ChatHistoryService {
                     }
 
                     return AIChatResponse.builder()
-                            .id(m.getId()) // ID tin nhắn
+                            .id(m.getId())
                             .sessionId(m.getSession().getId())
                             .role(m.getRole().name())
                             .content(m.getContent())
-                            .attachment(attachment) // Trả lại y nguyên lúc chat
-                            .actions(actions) // Trả lại y nguyên lúc chat
+                            .attachment(attachment)
+                            .actions(actions)
                             .createdAt(m.getCreatedAt())
                             .build();
                 })
-                .collect(Collectors.toList());
+               .toList();
     }
 
-    // ====================================================
-    // 3. TỰ ĐỘNG DỌN DẸP DỮ LIỆU CŨ (CRON JOB)
-    // ====================================================
-    @Scheduled(cron = "0 0 2 * * ?") // 2 giờ sáng mỗi ngày
+    @Scheduled(cron = "0 0 2 * * ?")
     public void cleanupOldChatData() {
         log.info("Bắt đầu dọn dẹp dữ liệu Chat AI cũ...");
         LocalDateTime cutoffDate = LocalDateTime.now().minusDays(30);
